tinyc/test/good/for-empty.c
int main()
{
    for ( unsigned a; false; )
        ;
    return 0;
}
