tinyc/test/bad/void-as-bool-or.c
void v() {}

int main()
{
    v() || v();
    return 0;
}
